--- a/layouts/_partials/components/sidebar-taxonomy.html
+++ b/layouts/_partials/components/sidebar-taxonomy.html
@@ -53,7 +53,7 @@
         {{- end -}}"
         href="{{ .Page.RelPermalink }}"
       >
-        {{ partial "functions/translate" .Name }}
+        {{ partial "functions/translate" .Page.LinkTitle }}
         <span class="inline-flex items-left justify-center w-4 h-4 ms-2 text-xs font-semibold text-primary-800 bg-primary-200 rounded-full">
           {{ .Count }}
         </span>
